; ModuleID = '/home/carl/AnghaBench/linux/net/sunrpc/extr_xprtmultipath.c_xprt_switch_put.c'
source_filename = "/home/carl/AnghaBench/linux/net/sunrpc/extr_xprtmultipath.c_xprt_switch_put.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_xprt_switch = type { i32 }

@xprt_switch_free = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xprt_switch_put(%struct.rpc_xprt_switch* %0) #0 {
  %2 = alloca %struct.rpc_xprt_switch*, align 8
  store %struct.rpc_xprt_switch* %0, %struct.rpc_xprt_switch** %2, align 8
  %3 = load %struct.rpc_xprt_switch*, %struct.rpc_xprt_switch** %2, align 8
  %4 = icmp ne %struct.rpc_xprt_switch* %3, null
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = load %struct.rpc_xprt_switch*, %struct.rpc_xprt_switch** %2, align 8
  %7 = getelementptr inbounds %struct.rpc_xprt_switch, %struct.rpc_xprt_switch* %6, i32 0, i32 0
  %8 = load i32, i32* @xprt_switch_free, align 4
  %9 = call i32 @kref_put(i32* %7, i32 %8)
  br label %10

10:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @kref_put(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
